added information about me

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 
 <body>
-
+  <h1>Jasmine Ebery</h1>
+  <h2>20S_MTM6201-020</h2>
+  <h3>Git Hub Username: eber0017</h3>
+  <p>One interesting thing I did over the break was completing some drawings I had started before this program started.
+  </p>
+  <p>I also read three amazing books called Six of Crows, Crooked Kingdom, and Oath Taker</p>
 </body>
 
 </html>
