--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -8,12 +8,18 @@
   <title>Landing Page</title>
 </head>
 
+<!-- my page will have a header section that will hold the logo
+then it will have a main section in the body that will hold the main content that includes the apply now form 
+finally it will have a footer section that will hold the already applied paragraph and the calculate form as well as the social media icons -->
+
 <body>
+  <!-- header hold the logo -->
   <header class="header">
     <div class="logo">
       <img src="images/logo/logo.png" alt="logo">
     </div>
   </header>
+  <!-- Main section in the body holds the main content that includes the apply now form  -->
   <main class="main">
     <div class="main-section-text">
       <h1>Want to be your own Boss</h1>
@@ -37,10 +43,12 @@
         <input type="checkbox" name="agree" value="agree">
         <label for="agree">I agree to Dash terms</label><br>
       </form>
+      <!-- make sure to have my button connect with the form using form id -->
       <button type="submit" form="nameform" value="submit">DRIVE WITH US</button>
       <p>Already applied? Check your application status here</p>
     </div>
   </main>
+  <!-- footer holds the last few paragraphs as well as the calculate form and the social media icons -->
   <footer>
     <p>See how much you can earn with Dash</p>
     <p>how many hours do you want to drive with us this week?</p>
@@ -50,6 +58,7 @@
       <label for="city"></label><br>
       <input type="text" id="city" name="city" placeholder="City"><br>
     </form>
+    <!-- make sure to have my button connect with the form using form id -->
     <button type="button" form="calform" value="submit">CALCULATE</button>
   </footer>
 </body>
