--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <!-- google fonts link -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
   <title>Landing Page</title>
 </head>
 
@@ -13,54 +16,71 @@ then it will have a main section in the body that will hold the main content tha
 finally it will have a footer section that will hold the already applied paragraph and the calculate form as well as the social media icons -->
 
 <body>
-  <!-- header hold the logo -->
-  <header class="header">
-    <div class="logo">
-      <img src="images/logo/logo.png" alt="logo">
-    </div>
-  </header>
-  <!-- Main section in the body holds the main content that includes the apply now form  -->
-  <main class="main">
-    <div class="main-section-text">
-      <h1>Want to be your own Boss</h1>
-      <p>Start today and make up to $30/hr driving your own vehicle with Dash!</p>
-    </div>
-    <div class="main-section-image">
-      <img src="images/bg-image/scooter.svg" alt="scooter">
-    </div>
-    <div class="main-section-form">
-      <h1>Apply Now</h1>
-      <p>Enter your info below</p>
-      <form method="post" id="nameform">
-        <label for="fname">First name</label><br>
-        <input type="text" id="fname" name="fname"><br>
-        <label for="lname">Last name</label><br>
-        <input type="text" id="lname" name="lname"><br>
-        <label for="phone#">Phone number</label><br>
-        <input type="text" id="phone#" name="phone#"><br>
-        <label for="email">Email Adress</label><br>
-        <input type="text" id="email" name="email"><br>
-        <input type="checkbox" name="agree" value="agree">
-        <label for="agree">I agree to Dash terms</label><br>
-      </form>
-      <!-- make sure to have my button connect with the form using form id -->
-      <button type="submit" form="nameform" value="submit">DRIVE WITH US</button>
-      <p>Already applied? Check your application status here</p>
-    </div>
-  </main>
+  <div class="wrapper">
+    <!-- header hold the logo -->
+    <header class="header">
+      <div>
+        <img class="logo" src="images/logo/logo.png" alt="logo">
+      </div>
+    </header>
+    <!-- Main section in the body holds the main content that includes the apply now form  -->
+    <main class="main">
+      <div class="main-section-text">
+        <h1>Want to be your own boss</h1>
+        <p>Start today and make up to $30/hr driving your own vehicle with Dash!</p>
+      </div>
+      <div>
+        <img class="scooter" src="images/bg-image/scooter.svg" alt="scooter">
+      </div>
+      <div class="main-section-form">
+        <form class="apply-form" method="post" id="nameform">
+          <h2>Apply Now</h2>
+          <p>Enter your info below</p>
+          <label for="fname"></label><br>
+          <input type="text" id="fname" name="fname" placeholder="First name"><br>
+          <label for="lname"></label><br>
+          <input type="text" id="lname" name="lname" placeholder="Last name"><br>
+          <label for="phone#"></label><br>
+          <input type="text" id="phone" name="phone#" placeholder="Phone number"><br>
+          <label for="email"></label><br>
+          <input type="text" id="email" name="email" placeholder="Email Adress"><br>
+          <div class="agree">
+            <input type="checkbox" name="agree" value="agree">
+            <label class="agree">I agree to Dash terms</label><br>
+          </div>
+          <button class="drive" type="submit" form="nameform" value="submit">DRIVE WITH US</button>
+          <p>Already applied?
+            <mark class="red">Check your application status here</mark>
+          </p>
+        </form>
+        <!-- make sure to have my button connect with the form using form id -->
+
+      </div>
+    </main>
+  </div>
   <!-- footer holds the last few paragraphs as well as the calculate form and the social media icons -->
   <footer>
-    <p>See how much you can earn with Dash</p>
+    <h3>See how much you can earn with Dash</h3>
     <p>how many hours do you want to drive with us this week?</p>
-    <form method="post" id="calform">
-      <label for="hours"></label><br>
-      <input type="text" id="hours" name="hours" placeholder="Hours"><br>
-      <label for="city"></label><br>
-      <input type="text" id="city" name="city" placeholder="City"><br>
+    <form class="calculate-form" method="post" id="calform">
+      <div class="flex">
+        <label for="hours"></label><br>
+        <input type="text" id="hours" name="hours" placeholder="Hours"><br>
+        <label for="city"></label><br>
+        <input type="text" id="city" name="city" placeholder="City"><br>
+      </div>
+      <button class="calculate" type="button" form="calform" value="submit">CALCULATE</button>
     </form>
     <!-- make sure to have my button connect with the form using form id -->
-    <button type="button" form="calform" value="submit">CALCULATE</button>
+    <!-- put the icons in their oen div so I can style them  -->
+    <div class="icons">
+      <img src="images/icons/facebook.svg" alt="facebook">
+      <img src="images/icons/instagram.svg" alt="instagram">
+      <img src="images/icons/twitter.svg" alt="twitter">
+      <img src="images/icons/linkedin.svg" alt="linkedin">
+    </div>
   </footer>
+
 </body>
 
 </html>
