--- a/picture-this/index.html
+++ b/picture-this/index.html
@@ -15,8 +15,34 @@
       <h1>Picture This!</h1>
       <h4>My Really Cool Blog Post</h4>
     </div>
-    <img src="images/museum.jpg" alt="placeholder">
+    <picture>
+      <!-- landscape images -->
+      <source srcset="images/museum-320_x_180.jpg, 
+      images/museum-640_x_360.jpg,
+      images/museum-960_x_540.jpg" media="(max-width: 320px)">
+      <source srcset="images/museum-480_x_269.jpg, 
+      images/museum-960_X_540.jpg, 
+      images/museum-1440_x_810.jpg" media="max-width: 480px">
+      <source srcset="images/museum-720_x_405.jpg, 
+      images/museum-1440_X_810.jpg, 
+      images/museum-2160_x_1215.jpg" media="(max-width: 720px)">
+      <source srcset="images/museum-960_x_540.jpg, 
+      images/museum-1920_X_1080.jpg, 
+      images/museum-2880_x_1621.jpg" media="(max-width: 960px)">
 
+      <!-- square images -->
+      <source srcset="images/museum-800_x_800.jpg, 
+      images/museum-1600_X_1600.jpg, 
+      images/museum-2400_x_2400.jpg" media="(max-width: 1600px)">
+      <source srcset="images/museum-640_x_640.jpg, 
+      images/museum-1280_X_1280.jpg, 
+      images/museum-1920_x_1920.jpg" media="(max-width: 1280px)">
+      <source srcset="images/museum-480_x_480.jpg, 
+      images/museum-960_X_960.jpg, 
+      images/museum-1440_x_1440.jpg" media="(max-width: 960px)">
+
+      <img src="images/museum-1440_x_810.jpg" alt=" museum">
+    </picture>
   </header>
 </body>
 
