--- a/midterm/index.html
+++ b/midterm/index.html
@@ -9,7 +9,78 @@
 </head>
 
 <body>
-
+  <div class="wrapper">
+    <header id="top">
+      <img src="images/logo.svg" alt="logo">
+      <nav>
+        <ul>
+          <li><a href="index.html" class="current-page home">Home</a></li>
+          <li><a href="about.html" class="about">About</a></li>
+          <li><a href="contact.html" class="contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div class="main">
+      <h1>Discover Your ARC.</h1>
+      <p>With Algonquin College's newest facility, there's always something for everyone to discover and enjoy!</p>
+      <div class="icons">
+        <img src="icons/bowling.svg" alt="bowling">
+        <figcaption>Bowling</figcaption>
+        <img src="icons/climb.svg" alt="rock-climbing">
+        <figcaption>Rock Climbing</figcaption>
+        <img src="icons/gym.svg" alt="fitness-center">
+        <figcaption>Fitness Center</figcaption>
+        <img src="icons/basketball.svg" alt="indoor-court">
+        <figcaption>Indoor Court</figcaption>
+      </div>
+      <button type="button">Get Started</button>
+      <picture>
+        <img src="images/discover.svg" alt="discover">
+      </picture>
+    </div>
+    <div class="discover>
+      <picture>
+        <img src=" images/school.jpg" alt="school">
+      </picture>
+      <h2>Discover</h2>
+      <h3>Algonquin College</h3>
+      <p>of Applied Arts and Technology is a publicly funded English-language college located in Ottawa, Ontario,
+        Canada. The college serves the National Capital Region and the outlying areas of Eastern Ontario, Western
+        Quebec, and Upstate New York.</p>
+      <button type="button">Learn More</button>
+    </div>
+    <div class="profile">
+      <img src="images/simon.jpg" alt="simon">
+      <h4>Dijanelle Simon
+        SA President
+      </h4>
+      <p>"Only with increased capacity can we expand and create a more inclusive program that attracts a greater number
+        of students to participate in physical and social activity. The Students' Association is committed to and
+        focused on programming that results in our students taking person ownership for their health."</p>
+    </div>
+    <div class="entertainment">
+      <img src="images/entertainment.jpg" alt="entertainment">
+      <h2>Discover</h2>
+      <h3>The Entertainment</h3>
+      <p>at Algonquin College is endless. We currently have the Algonquin Commons Theatre where we host a variety of
+        events. Now with the coming of the ARC facility, not only will it be providing more space for students to study,
+        but it will also be bringing in more room for late-night entertainment.</p>
+      <button type="button">Learn More</button>
+    </div>
+  </div>
+  <footer>
+    <h5>Follow Us</h5>
+    <picture>
+      <img src="icons/arrow.svg" alt="arrow" href="#top">
+      <figcaption>back to top</figcaption>
+    </picture>
+    <div class="social-media">
+      <img src="icons/facebook.svg" alt="facebook">
+      <img src="icons/instagram.svg" alt="instagram">
+      <img src="icons/twitter.svg" alt="twitter">
+      <img src="icons/youtube.svg" alt="youtube">
+    </div>
+  </footer>
 </body>
 
 </html>
