added comments to html files

--- a/midterm/about.html
+++ b/midterm/about.html
@@ -9,6 +9,8 @@
 
 <body>
   <div class="wrapper">
+    <!-- created a header section that will hold the logo and navigation bar -->
+    <!-- the header will also be linked to the "back to the top" link in the footer -->
     <header id="top">
       <img src="images/logo.svg" alt="logo">
       <nav>
@@ -19,6 +21,8 @@
         </ul>
       </nav>
     </header>
+    <!-- divided main body into eight sections: construction, about, services, competitive-friends, newsletter, fitness, climbing, and thanks. -->
+    <!-- each section has its appropriate text, images, and buttons -->
     <div class="construction">
       <h1>What to expect during construction.</h1>
       <p>With construction starting in April 2019 we anticipate the new arrival of the ARC building as early as August
@@ -59,11 +63,46 @@
         part of the upcoming ARC! Don't like bowling? Well, look no further. Practice your swing no matter the weather
         on the Golf Simulator that will be located in the ARC building.</p>
     </div>
+    <div class="newsletter">
+      <p>Keep up to date with our news letter</p>
+      <button type="button">Subscribe</button>
+    </div>
+    <div class="fitness">
+      <h2>New year, new me.</h2>
+      <h3>Fitness rooms</h3>
+      <p>Cardio equipment, free weights, selectorized weight equipment and stretching areas will be located in
+        strategically placed locations to best suit your work-out routine. Indoor walking/running track that will test
+        your endurance with inclines and declines that weave around fitness nods, the gymnasiums and the lounge area.
+      </p>
+    </div>
+    <div class="climbing">
+      <h2>Indoor climbing?</h2>
+      <h3>Rock climbing</h3>
+      <p>Test your strength and flexibility on the rock-climbing wall. Add some variety to your fitness routine, the ARC
+        will be able to offer more yoga and fitness classes to fit into your busy schedule. After a busy day of rock
+        climbing or yoga, come and enjoy our new massage therapy area. </p>
+    </div>
+    <div class="thanks">
+      <h1>Special thank you to the following</h1>
+      <img src="images/sa.png" alt="sa">
+      <img src="images/AC_ICON_FC_GRN_240x200.png" alt="ac">
+      <img src="images/pcl.png" alt="pcl">
+      <img src="images/cibc.png" alt="cibc">
+    </div>
 
   </div>
   <footer>
-    <h5>Keep up to date with out news letter</h5>
-    <button type="button">Subscribe</button>
+    <h5>Follow Us</h5>
+    <picture>
+      <img src="icons/arrow.svg" alt="arrow" href="#top">
+      <figcaption>back to top</figcaption>
+    </picture>
+    <div class="social-media">
+      <img src="icons/facebook.svg" alt="facebook">
+      <img src="icons/instagram.svg" alt="instagram">
+      <img src="icons/twitter.svg" alt="twitter">
+      <img src="icons/youtube.svg" alt="youtube">
+    </div>
   </footer>
 </body>
 
