--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -9,6 +9,8 @@
 
 <body>
   <div class="wrapper">
+    <!-- created a header section that will hold the logo and navigation bar -->
+    <!-- the header will also be linked to the "back to the top" link in the footer -->
     <header id="top">
       <img src="images/logo.svg" alt="logo">
       <nav>
@@ -19,6 +21,8 @@
         </ul>
       </nav>
     </header>
+    <!-- divided main body into three sections: communicate, contact-form, and location -->
+    <!-- each section has its appropriate text, images, and buttons -->
     <div class="communicate">
       <h1>We Want to Hear From You</h1>
       <p>If you have an idea for an activity that you think you and your fellow students would love to participate in
@@ -27,6 +31,7 @@
     <div class="contact-icons">
       <img src="images/contact-img.svg" alt="contact">
     </div>
+    <!-- created the contact form based on the XD file -->
     <div class="contact-form">
       <form>
         <label for="fname">Full Name</label><br>
@@ -47,12 +52,14 @@
         Ottawa, Ontario
         K2G 1V8
         (613) 727-4723 x7711</p>
+      <!-- embedded google maps with the college's location -->
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31731.17796337886!2d-75.75202996506461!3d45.33535877929238!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce04540b77e3bb%3A0x9e246d934b6c6ed!2sAlgonquin%20College%20of%20Applied%20Arts%20and%20Technology!5e0!3m2!1sen!2sca!4v1593985089348!5m2!1sen!2sca"
         width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
         tabindex="0"></iframe>
     </div>
   </div>
+  <!-- start coding footer, adding text, icons and back to top link -->
   <footer>
     <h5>Follow Us</h5>
     <picture>
