--- a/midterm/index.html
+++ b/midterm/index.html
@@ -10,6 +10,8 @@
 
 <body>
   <div class="wrapper">
+    <!-- created a header section that will hold the logo and navigation bar -->
+    <!-- the header will also be linked to the "back to the top" link in the footer -->
     <header id="top">
       <img src="images/logo.svg" alt="logo">
       <nav>
@@ -20,6 +22,8 @@
         </ul>
       </nav>
     </header>
+    <!-- divided main body into four sections: main, discover, profile, and entertainment -->
+    <!-- each section has its appropriate text, images, and buttons -->
     <div class="main">
       <h1>Discover Your ARC.</h1>
       <p>With Algonquin College's newest facility, there's always something for everyone to discover and enjoy!</p>
@@ -68,6 +72,7 @@
       <button type="button">Learn More</button>
     </div>
   </div>
+  <!-- start coding footer, adding text, icons and back to top link -->
   <footer>
     <h5>Follow Us</h5>
     <picture>
