back to top anchor fixed

--- a/midterm/about.html
+++ b/midterm/about.html
@@ -94,8 +94,10 @@
   <footer>
     <h5>Follow Us</h5>
     <picture>
-      <img src="icons/arrow.svg" alt="arrow" href="#top">
-      <figcaption>back to top</figcaption>
+      <a href="#top">
+        <img src="icons/arrow.svg" alt="arrow">
+        <figcaption>back to top</figcaption>
+      </a>
     </picture>
     <div class="social-media">
       <img src="icons/facebook.svg" alt="facebook">
