added reset .css to all pages

--- a/midterm/about.html
+++ b/midterm/about.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Midterm</title>
@@ -32,7 +34,9 @@
       <img src="images/construction.svg" alt="construction">
     </div>
     <div class="about">
-      <h1>About</h1>
+      <div class="about-container">
+        <h1>About</h1>
+      </div>
       <h2>Who</h2>
       <p>is ARC? We are the Athletics & Recreation Centre. This is an exciting venture for our Algonquin Community.
         This facility will provide our students with a place to break through perceptual barriers in a welcoming,
@@ -48,7 +52,13 @@
         Commons by a "Plus 15" Pedestrian Link. </p>
     </div>
     <div class="services">
-      <h1>Services</h1>
+      <div class="services-container">
+        <h1>Services</h1>
+      </div>
+      <picture>
+        <source srcset="images/bar.jpg" media="(min-width:800px">
+        <img src="images/bar.jpg" alt="bar">
+      </picture>
       <h2>Need a break?</h2>
       <h3>Restaurant & Lounge</h3>
       <p>will have full service throughout the day. Why not come in after a long day of class and order one of our
