--- a/midterm/about.html
+++ b/midterm/about.html
@@ -56,7 +56,7 @@
         <h1>Services</h1>
       </div>
       <picture>
-        <source srcset="images/bar.jpg" media="(min-width:800px">
+        <source srcset="images/bar.jpg" media="(min-width:800px)">
         <img src="images/bar.jpg" alt="bar">
       </picture>
       <h2>Need a break?</h2>
@@ -67,6 +67,10 @@
         lanes! </p>
     </div>
     <div class="competitive-friends">
+      <picture>
+        <source srcset="images/bowling.jpg" media="(min-width:800px)">
+        <img src="images/bowling.jpg" alt="bowling">
+      </picture>
       <h2>Competitive Friends?</h2>
       <h3>Bowling Lanes</h3>
       <p>are finally here. Grab your friends and book a lane at the Students’ Association Bowling Lanes that will be
@@ -78,6 +82,10 @@
       <button type="button">Subscribe</button>
     </div>
     <div class="fitness">
+      <picture>
+        <source srcset="images/fitness.jpg" media="(min-width:800px)">
+        <img src="images/fitness.jpg" alt="fitness">
+      </picture>
       <h2>New year, new me.</h2>
       <h3>Fitness rooms</h3>
       <p>Cardio equipment, free weights, selectorized weight equipment and stretching areas will be located in
@@ -86,6 +94,10 @@
       </p>
     </div>
     <div class="climbing">
+      <picture>
+        <source srcset="images/climbing.jpg">
+        <img src="images/climbing.jpg" alt="climbing">
+      </picture>
       <h2>Indoor climbing?</h2>
       <h3>Rock climbing</h3>
       <p>Test your strength and flexibility on the rock-climbing wall. Add some variety to your fitness routine, the ARC
