--- a/midterm/index.html
+++ b/midterm/index.html
@@ -6,88 +6,106 @@
   <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
   <title>Midterm</title>
 </head>
 
 <body>
+  <!-- created a header section that will hold the logo and navigation bar -->
+  <!-- the header will also be linked to the "back to the top" link in the footer -->
+  <header id="top">
+    <img src="images/logo.svg" alt="logo" class="logo">
+    <nav>
+      <ul>
+        <li><a href="index.html" class="current-page home">Home</a></li>
+        <li><a href="about.html" class="about">About</a></li>
+        <li><a href="contact.html" class="contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <!-- divided main body into four sections: main, discover, profile, and entertainment -->
+  <!-- each section has its appropriate text, images, and buttons -->
   <div class="wrapper">
-    <!-- created a header section that will hold the logo and navigation bar -->
-    <!-- the header will also be linked to the "back to the top" link in the footer -->
-    <header id="top">
-      <img src="images/logo.svg" alt="logo">
-      <nav>
-        <ul>
-          <li><a href="index.html" class="current-page home">Home</a></li>
-          <li><a href="about.html" class="about">About</a></li>
-          <li><a href="contact.html" class="contact">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <!-- divided main body into four sections: main, discover, profile, and entertainment -->
-    <!-- each section has its appropriate text, images, and buttons -->
     <div class="main">
-      <h1>Discover Your ARC.</h1>
+      <h1>Discover Your</h1>
       <p>With Algonquin College's newest facility, there's always something for everyone to discover and enjoy!</p>
-      <div class="icons">
-        <img src="icons/bowling.svg" alt="bowling">
-        <figcaption>Bowling</figcaption>
-        <img src="icons/climb.svg" alt="rock-climbing">
-        <figcaption>Rock Climbing</figcaption>
-        <img src="icons/gym.svg" alt="fitness-center">
-        <figcaption>Fitness Center</figcaption>
-        <img src="icons/basketball.svg" alt="indoor-court">
-        <figcaption>Indoor Court</figcaption>
+      <div class="fitness-icons">
+        <figure>
+          <img src="icons/bowling.svg" alt="bowling" class="bowling-icon">
+          <figcaption>Bowling</figcaption>
+        </figure>
+        <figure>
+          <img src="icons/climb.svg" alt="rock-climbing" class="climbing-icon">
+          <figcaption>Rock Climbing</figcaption>
+        </figure>
+        <figure>
+          <img src="icons/gym.svg" alt="fitness-center" class="weight-icon">
+          <figcaption>Fitness Center</figcaption>
+        </figure>
+        <figure>
+          <img src="icons/basketball.svg" alt="indoor-court" class="basketball-icon">
+          <figcaption>Indoor Court</figcaption>
+        </figure>
       </div>
-      <button type="button">Get Started</button>
+      <button type="button" class="get-started">Get Started</button>
       <picture>
-        <img src="images/discover.svg" alt="discover">
+        <img src="images/discover.svg" alt="discover" class="discover-img">
       </picture>
     </div>
-    <div class="discover>
-      <picture>
-        <img src=" images/school.jpg" alt="school">
-      </picture>
+  </div>
+
+  <picture>
+    <img src="images/school.jpg" alt="school" class="school">
+  </picture>
+  <div class="wrapper">
+    <div class="discover">
       <h2>Discover</h2>
       <h3>Algonquin College</h3>
       <p>of Applied Arts and Technology is a publicly funded English-language college located in Ottawa, Ontario,
         Canada. The college serves the National Capital Region and the outlying areas of Eastern Ontario, Western
         Quebec, and Upstate New York.</p>
-      <button type="button">Learn More</button>
+      <button type="button" class="learn-more">Learn More</button>
     </div>
-    <div class="profile">
-      <img src="images/simon.jpg" alt="simon">
-      <h4>Dijanelle Simon
-        SA President
-      </h4>
-      <p>"Only with increased capacity can we expand and create a more inclusive program that attracts a greater number
-        of students to participate in physical and social activity. The Students' Association is committed to and
-        focused on programming that results in our students taking person ownership for their health."</p>
-    </div>
+  </div>
+  <div class="profile">
+    <img src="images/simon.jpg" alt="simon" class="simon">
+    <h4>Dijanelle Simon</h4>
+    <h4>SA President</h4>
+    <p>"Only with increased capacity can we expand and create a more inclusive program that attracts a greater number
+      of students to participate in physical and social activity. The Students' Association is committed to and
+      focused on programming that results in our students taking person ownership for their health."</p>
+  </div>
+  <img src="images/entertainment.jpg" alt="entertainment" class="entertainment-img">
+  <div class="wrapper">
     <div class="entertainment">
-      <img src="images/entertainment.jpg" alt="entertainment">
       <h2>Discover</h2>
-      <h3>The Entertainment</h3>
+      <h3>The entertainment</h3>
       <p>at Algonquin College is endless. We currently have the Algonquin Commons Theatre where we host a variety of
         events. Now with the coming of the ARC facility, not only will it be providing more space for students to study,
         but it will also be bringing in more room for late-night entertainment.</p>
-      <button type="button">Learn More</button>
+      <button type="button" class="learn-more">Learn More</button>
     </div>
   </div>
   <!-- start coding footer, adding text, icons and back to top link -->
   <footer>
-    <h5>Follow Us</h5>
-    <picture>
+    <div class="follow-us">
+      <h5>Follow Us</h5>
+      <div class="social-media">
+        <img src="icons/facebook.svg" alt="facebook">
+        <img src="icons/instagram.svg" alt="instagram">
+        <img src="icons/twitter.svg" alt="twitter">
+        <img src="icons/youtube.svg" alt="youtube">
+      </div>
+    </div>
+    <picture class=top>
       <a href="#top">
-        <img src="icons/arrow.svg" alt="arrow">
-        <figcaption>back to top</figcaption>
+        <figure>
+          <img src="icons/arrow.svg" alt="arrow" class="arrow">
+          <figcaption>back to top</figcaption>
+        </figure>
       </a>
     </picture>
-    <div class="social-media">
-      <img src="icons/facebook.svg" alt="facebook">
-      <img src="icons/instagram.svg" alt="instagram">
-      <img src="icons/twitter.svg" alt="twitter">
-      <img src="icons/youtube.svg" alt="youtube">
-    </div>
   </footer>
 </body>
 
