styling tablet view and added images

--- a/midterm/about.html
+++ b/midterm/about.html
@@ -63,7 +63,7 @@
   <div class="wrapper">
     <div class="restaurant">
       <picture>
-        <source srcset="images/bar.jpg" media="(min-width:800px)">
+        <source srcset="images/bar_rect.jpg" media="(min-width:800px)">
         <img src="images/bar.jpg" alt="bar" class="bar-img">
       </picture>
       <h2>Need a break?</h2>
@@ -76,7 +76,7 @@
   </div>
   <div class="competitive-friends">
     <picture>
-      <source srcset="images/bowling.jpg" media="(min-width:800px)">
+      <source srcset="images/bowling_rect.jpg" media="(min-width:800px)">
       <img src="images/bowling.jpg" alt="bowling" class="bowling-img">
     </picture>
     <div class="friends-container">
@@ -94,7 +94,7 @@
   <div class="wrapper">
     <div class="fitness">
       <picture>
-        <source srcset="images/fitness.jpg" media="(min-width:800px)">
+        <source srcset="images/fitness_rect.jpg" media="(min-width:800px)">
         <img src="images/fitness.jpg" alt="fitness" class="fitness-img">
       </picture>
       <h2>New year, new me.</h2>
@@ -107,7 +107,7 @@
   </div>
   <div class="climbing">
     <picture>
-      <source srcset="images/climbing.jpg">
+      <source srcset="images/climbing_rect.jpg">
       <img src="images/climbing.jpg" alt="climbing" class="climbing-img">
     </picture>
     <div class="climbing-container">
@@ -133,10 +133,10 @@
     <div class="follow-us">
       <h5>Follow Us</h5>
       <div class="social-media">
-        <img src="icons/facebook.svg" alt="facebook">
-        <img src="icons/instagram.svg" alt="instagram">
-        <img src="icons/twitter.svg" alt="twitter">
-        <img src="icons/youtube.svg" alt="youtube">
+        <img src="icons/facebook.svg" alt="facebook" class="facebook">
+        <img src="icons/instagram.svg" alt="instagram" class="instagram">
+        <img src="icons/twitter.svg" alt="twitter" class="twitter">
+        <img src="icons/youtube.svg" alt="youtube" class="youtube">
       </div>
     </div>
     <picture class=top>
