--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -37,13 +37,13 @@
     <div class="contact-form">
       <form>
         <h6>Contact us.</h6>
-        <label for="fname">Full Name</label><br>
+        <label for="fname" class="label">Full Name</label><br>
         <input type="text" id="fname" name="fname" placeholder="Full Name"><br>
-        <label for="snumber">Student Number</label><br>
+        <label for="snumber" class="label">Student Number</label><br>
         <input type="text" id="snumber" name="snumber" placeholder="Student Number"><br>
-        <label for="email">Email</label><br>
+        <label for="email" class="label">Email</label><br>
         <input type="text" id="email" name="email" placeholder="Email"><br>
-        <label for="message">Message</label>
+        <label for="message" class="label">Message</label>
         <textarea name="messsage" id="message" cols="30" rows="10" placeholder="Message">Message</textarea><br>
         <button type="button" class="submit">Submit<br>
       </form>
@@ -51,11 +51,13 @@
     <div class="location">
       <h1>Our Location.</h1>
       <h7>Algonquin College Students' Association</h7>
-      <p>Monday to Friday – 8:30am to 6:00pm</p>
-      <p>1385 Woodroffe Avenue (E114)</p>
-      <p>Ottawa, Ontario</p>
-      <p> K2G 1V8</p>
-      <p> (613) 727-4723 x7711</p>
+      <div class="location-text">
+        <p>Monday to Friday – 8:30am to 6:00pm</p>
+        <p>1385 Woodroffe Avenue (E114)</p>
+        <p>Ottawa, Ontario</p>
+        <p> K2G 1V8</p>
+        <p> (613) 727-4723 x7711</p>
+      </div>
     </div>
   </div>
   <!-- embedded google maps with the college's location -->
@@ -68,10 +70,10 @@
     <div class="follow-us">
       <h5>Follow Us</h5>
       <div class="social-media">
-        <img src="icons/facebook.svg" alt="facebook">
-        <img src="icons/instagram.svg" alt="instagram">
-        <img src="icons/twitter.svg" alt="twitter">
-        <img src="icons/youtube.svg" alt="youtube">
+        <img src="icons/facebook.svg" alt="facebook" class="facebook">
+        <img src="icons/instagram.svg" alt="instagram" class="instagram">
+        <img src="icons/twitter.svg" alt="twitter" class="twitter">
+        <img src="icons/youtube.svg" alt="youtube" class="youtube">
       </div>
     </div>
     <picture class=top>
