made changes to profile section

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -56,13 +56,14 @@
       <picture class="grid-right">
         <img src="images/discover.svg" alt="discover" class="discover-img">
       </picture>
-      <figure class="scroll grid-bottom">
+      <picture class="scroll">
+        <source srcset="icons/arrow.svg" media="(min-width:800px)">
         <img src="icons/arrow.svg" alt="scroll-arrow" class="scroll-arrow">
         <figcaption>scroll</figcaption>
-      </figure>
+      </picture>
     </div>
   </div>
-  <div class="school-grid">
+  <div class=" school-grid">
     <div class="school-img">
       <picture>
         <source srcset="images/school.jpg" media="(min-width: 100px)">
@@ -82,13 +83,14 @@
   <div class="profile">
     <div>
       <img src="images/simon.jpg" alt="simon" class="simon">
-      <div class="profile-head">
-        <h4>Dijanelle Simon</h4>
-        <h4>SA President</h4>
-      </div>
+    </div>
+    <div class="profile-head">
+      <h4>Dijanelle Simon</h4>
+      <h4>SA President</h4>
     </div>
     <div class="profile-p">
-      <p>"Only with increased capacity can we expand and create a more inclusive program that attracts a greater number
+      <p>"Only with increased capacity can we expand and create a more inclusive program that attracts a greater
+        number
         of students to participate in physical and social activity. The Students' Association is committed to and
         focused on programming that results in our students taking person ownership for their health."</p>
     </div>
@@ -102,7 +104,8 @@
       <h2>Discover</h2>
       <h3>The entertainment</h3>
       <p>at Algonquin College is endless. We currently have the Algonquin Commons Theatre where we host a variety of
-        events. Now with the coming of the ARC facility, not only will it be providing more space for students to study,
+        events. Now with the coming of the ARC facility, not only will it be providing more space for students to
+        study,
         but it will also be bringing in more room for late-night entertainment.</p>
       <button type="button" class="learn-more">Learn More</button>
     </div>
